add merchant list in admin panel, add merchant, and edit merchant details. Create + Update

--- a/client/views/admin.html
+++ b/client/views/admin.html
@@ -1,9 +1,11 @@
- <template name="customUserListHeaders">
- </template>
- <template name="customUserListFields">
- </template>
+<template name="admin">
+	<h1>Admin Panel</h1>
+	
+	{{> merchantList}}
 
- <template name="customUserInfoFields">
- </template>
- <template name="customUserEditFields">
- </template>
+	{{> addMerchant}}
+</template>
+
+<template name="404">
+	<h1>Page not found</h1>
+</template>
