--- a/client/views/merchants/add_merchant.html
+++ b/client/views/merchants/add_merchant.html
@@ -1,6 +1,6 @@
 <template name="addMerchant">
 
-	<legend>Add a Merchant</legend>
+	<legend>Add a new Merchant</legend>
 
 	<form class="form-horizontal">
 		<div class="row">
@@ -32,8 +32,13 @@
 			<div class="col col-lg-4 col-sm-7">
 				<input type="text" name="currency" placeholder="USD">
 			</div>
-
-		</div>	
+		</div>
+		<div class="row">
+			<label class="col col-lg-3 control-label">Cap</label>
+			<div class="col col-lg-4 col-sm-7">
+				<input type="text" name="cap" placeholder="$USD 300">
+			</div>
+		</div>
 		<div class="row">
 			<label class="col col-lg-3 control-label">Remarks</label>
 			<div class="col col-lg-8">
