--- a/client/views/orders/order_item.html
+++ b/client/views/orders/order_item.html
@@ -1,7 +1,7 @@
 <template name="orderItem">
 	<tr>
 		<td>{{quantity}}x</td>
-		<td><a href="{{url}}" title="">{{name}}</a></td>
+		<td><a href="{{url}}" target="_blank" title="">{{name}}</a></td>
 		<td>{{size}}</td>
 		<td>{{color}}</td>
 		<td>${{price}}</td>
