--- a/client/views/orders/order_list.html
+++ b/client/views/orders/order_list.html
@@ -8,7 +8,7 @@
 					<th>Name</th>
 					<th>Size</th>
 					<th>Colour</th>
-					<th>{{merchant.currency}}</th>
+					<th>Price</th>
 					<th>SGD</th>
 					<th></th>
 				</tr>
