Added Banner Image for merchants +added FaQ pages using sidebar and modals

--- a/client/views/merchants/add_merchant.html
+++ b/client/views/merchants/add_merchant.html
@@ -16,6 +16,12 @@
 			</div>
 		</div>
 		<div class="row">
+			<label class="col col-lg-3 control-label">Banner URL</label>
+			<div class="col col-lg-8">
+				<input type="url" name="banner" placeholder="http://.../banner.jpg">
+			</div>
+		</div>
+		<div class="row">
 			<label class="col col-lg-3 control-label">Speed</label>
 			<div class="col col-lg-4 col-sm-7">
 				<input type="text" name="speed" placeholder="2-3 weeks">
