--- a/client/views/sidebar.html
+++ b/client/views/sidebar.html
@@ -8,5 +8,18 @@
 		</ul>
 	</div>
 
+	<div class="panel">
+		<ul class="list-group list-group-flush">
+			<a class="list-group-item" data-toggle="modal" data-target="#aboutus">About Us</a>
+			<a class="list-group-item" data-toggle="modal" data-target="#howto">How to Spree</a>
+			<a class="list-group-item" data-toggle="modal" data-target="#faq">FAQ</a>
+			<a class="list-group-item" data-toggle="modal" data-target="#privacy">Privacy Policy</a>
+			<a class="list-group-item" data-toggle="modal" data-target="#terms">Terms & Conditions</a>
+			<a class="list-group-item" data-toggle="modal" data-target="#contact">Contact Us</a>
+		</ul>
+	</div>
+
 	{{> exchange}}
+
+	{{> modals}}
 </template>
