--- a/client/views/merchants/merchant_list.html
+++ b/client/views/merchants/merchant_list.html
@@ -3,51 +3,62 @@
 	<div class="panel">
 		<form class="form">
 			<div class="row">
-				<label class="col col-lg-3">Merchant Name</label>
-				<div class="col col-lg-7">
-					<input type="text" name="_id" value="{{_id}}">
-				</div>
-				<div class="col col-lg-1">
-					#{{counter}}
-				</div>
-			</div>
-			<div class="row">
-				<label class="col col-lg-3">Merchant URL</label>
 				<div class="col col-lg-8">
-					<input type="url" name="url" value="{{url}}" >
-				</div>
-			</div>
-			<div class="row">
-				<label class="col col-lg-3">Speed</label>
-				<div class="col col-lg-4 col-sm-7">
-					<input type="text" name="speed" value="{{speed}}">
-				</div>
-			</div>
-			<div class="row">
-				<label class="col col-lg-3">Shipping</label>
-				<div class="col col-lg-4 col-sm-7">
-					<input type="text" name="shipping" value="{{shipping}}">
-				</div>
-			</div>
-			<div class="row">
-				<label class="col col-lg-3">Currency</label>
-				<div class="col col-lg-4 col-sm-7">
-					<input type="text" name="currency" value="{{currency}}">
-				</div>
-			</div>
-			<div class="row">
-				<label class="col col-lg-3">Cap</label>
-				<div class="col col-lg-4 col-sm-7">
-					<input type="text" name="cap" value="{{cap}}">
-				</div>
-			</div>			
-			<div class="row">
-				<label class="col col-lg-3">Remarks</label>
-				<div class="col col-lg-4">
-					<textarea rows="3" name="remarks">{{remarks}}</textarea>
-				</div>
+					<div class="row">
+						<label class="col col-lg-4">Merchant Name</label>
+						<div class="col col-lg-8">
+							<input class="input-small" type="text" name="_id" value="{{_id}}">
+						</div>
 
-				<div class="col col-lg-4">					
+					</div>
+					<div class="row">
+						<label class="col col-lg-4">Merchant URL</label>
+						<div class="col col-lg-8">
+							<input class="input-small" type="url" name="url" value="{{url}}" >
+						</div>
+					</div>
+					<div class="row">
+						<label class="col col-lg-4">Banner URL</label>
+						<div class="col col-lg-8">
+							<input class="input-small" type="url" name="banner" value="{{banner}}" >
+						</div>
+					</div>
+					<div class="row">
+						<label class="col col-lg-4">Speed</label>
+						<div class="col col-lg-8 col-sm-7">
+							<input class="input-small" type="text" name="speed" value="{{speed}}">
+						</div>
+					</div>
+					<div class="row">
+						<label class="col col-lg-4">Shipping</label>
+						<div class="col col-lg-8 col-sm-7">
+							<input class="input-small" type="text" name="shipping" value="{{shipping}}">
+						</div>
+					</div>
+					<div class="row">
+						<label class="col col-lg-4">Currency</label>
+						<div class="col col-lg-8 col-sm-7">
+							<input class="input-small" type="text" name="currency" value="{{currency}}">
+						</div>
+					</div>
+					<div class="row">
+						<label class="col col-lg-4">Cap</label>
+						<div class="col col-lg-8 col-sm-7">
+							<input class="input-small" type="text" name="cap" value="{{cap}}">
+						</div>
+					</div>			
+					<div class="row">
+						<label class="col col-lg-4">Remarks</label>
+						<div class="col col-lg-8">
+							<textarea rows="3" name="remarks">{{remarks}}</textarea>
+						</div>
+					</div>
+				</div>
+				<div class="col col-lg-4">
+
+					<b>Counter: #{{counter}}</b>
+
+					<br>
 					<a type="button" class="btn btn-info col col-lg-6" name="update"><span class="glyphicon glyphicon-pencil"></span> Update</a>
 					<a type="button" class="btn btn-info col col-lg-6" name="delete"><span class="glyphicon glyphicon-trash"></span> Delete</a>
 					{{#if open}}
@@ -58,5 +69,6 @@
 				</div>
 			</div>
 		</div>
-		{{/each}}
-	</template>
+	</form>
+	{{/each}}
+</template>
