--- a/client/views/merchants/merchant_page.html
+++ b/client/views/merchants/merchant_page.html
@@ -1,4 +1,8 @@
 <template name="merchantPage">
+	<div class="panel merchant-banner">
+		<img src="{{merchant.banner}}" alt="">
+	</div>
+
 	<div class="panel">
 		<dl class="dl-horizontal">
 			<dt>Website</dt>
