--- a/client/views/merchants/merchant_page.html
+++ b/client/views/merchants/merchant_page.html
@@ -1,23 +1,29 @@
 <template name="merchantPage">
+	{{#if merchant.banner}}
 	<div class="panel merchant-banner">
 		<img src="{{merchant.banner}}" alt="">
 	</div>
+	{{/if}}
 
 	<div class="panel">
 		<dl class="dl-horizontal">
 			<dt>Website</dt>
-			<dd><a href="{{merchant.url}}" target="_blank" title="">{{merchant.url}}</a></dd>
+			<dd><a href="{{merchant.url}}" target="_blank" title="">{{merchant._id}}</a></dd>
 
 			{{#if merchant.open}}
-			<dt>Spree Title</dt>
-			<dd>{{merchant._id}} #{{openSpree.counter}}</dd>
-
-			<dt>Spree Cap</dt>
-			<dd>{{merchant.cap}}</dd>
-			<dt>Closing Date</dt>
-			<dd>{{formatDate openSpree.endDate}}</dd>
 			<dt>Status</dt>
 			<dd>{{openSpree.status}}</dd>
+			<dt>Spree Count</dt>
+			<dd>#{{openSpree.counter}}</dd>
+			<dt>Closing Date</dt>
+			<dd>{{formatDate openSpree.endDate}}</dd>
+			<br>
+			<dt>Currency</dt>
+			<dd>{{merchant.currency}}</dd>
+			<dt>Spree Cap</dt>
+			<dd>{{merchant.cap}}</dd>
+			<dt>Shipping Details</dt>
+			<dd>{{merchant.shipping}}</dd>
 			{{else}}
 			There are no open Sprees for this merchant.
 			{{/if}}
@@ -27,5 +33,13 @@
 	<div class="panel">
 		<div class="panel-heading">My Shopping Cart</div>
 		{{> orderList}}
+
+		<hr>
+		{{> addOrderItem}}
+	</div>
+
+	<div class="panel">
+		<div class="panel-heading">What others are ordering</div>
+		{{> orderHistory}}
 	</div>
 </template>
