--- a/client/views/orders/order_list.html
+++ b/client/views/orders/order_list.html
@@ -21,10 +21,20 @@
 			</tbody>
 		</table>
 	</div>
+	<br>
+	<div class="row">
+		<div class="col col-lg-3 col-offset-9" style="text-align:right; ">
+			<b>Total Price:</b> {{sumPrice myOrder}} {{getCurrency}}<br>
+			<b>Exchange Rate:</b> x {{getExchangeRate getCurrency}}
+			<hr style="margin-top: 2px; margin-bottom: 5px;">
+			<b>Total Payment:</b> {{sumSGD myOrder}} SGD
+			
+			<br><br>
+			<a class="btn btn-info btn-block">Checkout</a>
+		</div>
+	</div>
 	{{else}}
 	You have not placed any orders in this spree.
 	{{/if}}
-
-	<hr>
-	{{> addOrderItem}}
+	
 </template>
