--- a/client/views/modals.html
+++ b/client/views/modals.html
@@ -116,17 +116,28 @@
 						<abbr title="Phone">P:</abbr> (123) 456-7890
 					</address>
 					<img src="http://maps.googleapis.com/maps/api/staticmap?center=Brooklyn+Bridge,New+York,NY&zoom=13&size=600x300&maptype=roadmap
-&markers=color:blue%7Clabel:S%7C40.702147,-74.015794&markers=color:green%7Clabel:G%7C40.711614,-74.012318
-&markers=color:red%7Ccolor:red%7Clabel:C%7C40.718217,-73.998284&sensor=false" alt="">
-
+					&markers=color:blue%7Clabel:S%7C40.702147,-74.015794&markers=color:green%7Clabel:G%7C40.711614,-74.012318
+					&markers=color:red%7Ccolor:red%7Clabel:C%7C40.718217,-73.998284&sensor=false" alt="" width="100%">
+					
 					<p>Ex, quas nostrum quam inventore amet voluptates nisi? Voluptates, porro, dolorum, ratione ipsum nam laboriosam accusantium sapiente perspiciatis ut esse obcaecati dolores nobis nulla ipsam sint fugit soluta cupiditate cum.</p>
-					<p>Nobis, ipsa laborum fugiat assumenda vitae nesciunt temporibus. Voluptatibus, quisquam, sint, dolore, dolorum ipsa atque illo mollitia neque omnis itaque quos quis asperiores in hic ut? Vel, sapiente dignissimos numquam.</p>
-					<p>Blanditiis, aperiam, enim, ab debitis ad fugit dicta laboriosam non itaque illum ipsum sapiente optio provident laborum illo officia deleniti harum necessitatibus earum nam ea doloribus dolorem libero est omnis.</p>
-				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-				</div>
-			</div><!-- /.modal-content -->
-		</div><!-- /.modal-dalog -->
-	</div><!-- /.modal -->
+				</p>
+
+				<form id="contact-form">
+					<label>Name:</label>
+					<input type="text" name="name" placeholder="Michelle Chua">
+					<label>Email Address</label>
+					<input type="email" name="email" placeholder="michelle@gmail.com" required>
+					<label>Message</label>
+					<textarea name="body" rows="10" required></textarea>
+						
+					<br>
+					<button type="submit" class="btn btn-primary span4">Submit</button>
+				</form>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+			</div>
+		</div><!-- /.modal-content -->
+	</div><!-- /.modal-dalog -->
+</div><!-- /.modal -->
 </template>
