use bootstrap 2 class names

--- a/client/views/exchange/exchange.html
+++ b/client/views/exchange/exchange.html
@@ -1,7 +1,7 @@
 <template name="exchange">
-  <div class="panel hidden-sm">
-    <div class="panel-heading">Exchange Rates</div>
 
+    <!-- <div class="panel-heading">Exchange Rates</div> -->
+    <li class="nav-header">Exchange Rates</li>
     <table class="table table-condensed">
       <thead>
         <tr>
@@ -22,8 +22,8 @@
         </tr>
         {{/each}}
       </tbody>
+      <span class="muted">All rates are fixed</span>
     </table>
-
-    <span class="text-muted">All rates are fixed</span>
-  </div>
+    
+  <!-- </div> -->
 </template>
