--- a/client/views/merchants/add_merchant.html
+++ b/client/views/merchants/add_merchant.html
@@ -3,57 +3,57 @@
 	<legend>Add a new Merchant</legend>
 
 	<form class="form-horizontal">
-		<div class="row">
-			<label class="col col-lg-3 control-label">Merchant Name</label>
-			<div class="col col-lg-8">
-				<input type="text" name="_id" placeholder="Zara">
+		<div class="control-group">
+			<label class="span3 control-label">Merchant Name</label>
+			<div class="span8 controls">
+				<input class="input-block-level" type="text" name="_id" placeholder="Zara">
 			</div>
 		</div>
-		<div class="row">
-			<label class="col col-lg-3 control-label">Merchant URL</label>
-			<div class="col col-lg-8">
-				<input type="url" name="url" placeholder="http://...">
+		<div class="control-group">
+			<label class="span3 control-label">Merchant URL</label>
+			<div class="span8 controls">
+				<input class="input-block-level" type="url" name="url" placeholder="http://...">
 			</div>
 		</div>
-		<div class="row">
-			<label class="col col-lg-3 control-label">Banner URL</label>
-			<div class="col col-lg-8">
-				<input type="url" name="banner" placeholder="http://.../banner.jpg">
+		<div class="control-group">
+			<label class="span3 control-label">Banner URL</label>
+			<div class="span8 controls">
+				<input class="input-block-level" type="url" name="banner" placeholder="http://.../banner.jpg">
 			</div>
 		</div>
-		<div class="row">
-			<label class="col col-lg-3 control-label">Speed</label>
-			<div class="col col-lg-4 col-sm-7">
-				<input type="text" name="speed" placeholder="2-3 weeks">
+		<div class="control-group">
+			<label class="span3 control-label">Speed</label>
+			<div class="span4 controls">
+				<input class="input-block-level" type="text" name="speed" placeholder="2-3 weeks">
 			</div>
 		</div>
-		<div class="row">
-			<label class="col col-lg-3 control-label">Shipping</label>
-			<div class="col col-lg-4 col-sm-7">
-				<input type="text" name="shipping" placeholder="$3">
+		<div class="control-group">
+			<label class="span3 control-label">Shipping</label>
+			<div class="span4 controls">
+				<input class="input-block-level" type="text" name="shipping" placeholder="$3">
 			</div>
 		</div>
-		<div class="row">
-			<label class="col col-lg-3 control-label">Currency</label>
-			<div class="col col-lg-4 col-sm-7">
-				<input type="text" name="currency" placeholder="USD">
+		<div class="control-group">
+			<label class="span3 control-label">Currency</label>
+			<div class="span4 controls">
+				<input class="input-block-level" type="text" name="currency" placeholder="USD">
 			</div>
 		</div>
-		<div class="row">
-			<label class="col col-lg-3 control-label">Cap</label>
-			<div class="col col-lg-4 col-sm-7">
-				<input type="text" name="cap" placeholder="$USD 300">
+		<div class="control-group">
+			<label class="span3 control-label">Cap</label>
+			<div class="span4 controls">
+				<input class="input-block-level" type="text" name="cap" placeholder="$USD 300">
 			</div>
 		</div>
-		<div class="row">
-			<label class="col col-lg-3 control-label">Remarks</label>
-			<div class="col col-lg-8">
-				<textarea rows="3" name="remarks"></textarea>
+		<div class="control-group">
+			<label class="span3 control-label">Remarks</label>
+			<div class="span8 controls">
+				<textarea class="input-block-level" rows="5" name="remarks"></textarea>
 			</div>
 		</div>
 
-		<div class="row">
-			<div class="col col-lg-4 col-offset-4">
+		<div class="control-group">
+			<div class="span4 offset4">
 				<button type="submit" class="btn btn-primary btn-block">Add Merchant</button>
 			</div>
 		</div>
