--- a/client/views/merchants/merchant_page.html
+++ b/client/views/merchants/merchant_page.html
@@ -1,11 +1,11 @@
 <template name="merchantPage">
 	{{#if merchant.banner}}
-	<div class="panel merchant-banner">
+	<div class="merchant-banner">
 		<img src="{{merchant.banner}}" alt="">
 	</div>
 	{{/if}}
 
-	<div class="panel">
+	<div class="well">
 		<dl class="dl-horizontal">
 			<dt>Website</dt>
 			<dd><a href="{{merchant.url}}" target="_blank" title="">{{merchant._id}}</a></dd>
@@ -30,16 +30,16 @@
 		</dl>
 	</div>
 	
-	<div class="panel">
-		<div class="panel-heading">My Shopping Cart</div>
+	<!-- <div class="panel"> -->
+		<!-- <div class="panel-heading">My Shopping Cart</div> -->
+		<legend>Shopping Cart</legend>
 		{{> orderList}}
-
-		<hr>
 		{{> addOrderItem}}
-	</div>
+	<!-- </div> -->
 
-	<div class="panel">
-		<div class="panel-heading">What others are ordering</div>
+	<!-- <div class="panel"> -->
+		<!-- <div class="panel-heading">What others are ordering</div> -->
+		<legend>What others are ordering</legend>
 		{{> orderHistory}}
-	</div>
+	<!-- </div> -->
 </template>
