--- a/client/views/navbar.html
+++ b/client/views/navbar.html
@@ -1,5 +1,5 @@
 <template name="navbar">
-	<div class="navbar navbar-static-top navbar-inverse">
+	<div class="navbar navbar-static-top">
 		<div class="navbar-inner">
 			<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 				<span class="icon-bar"></span>
@@ -7,13 +7,12 @@
 				<span class="icon-bar"></span>
 			</a>
 
-			<a class="brand" href="/">yantingspree</a>
+			<a class="brand" href="/"><img src="/img/logo.png" alt="" height="30px"></a>
 
 			<div class="nav-collapse collapse">
 				<ul class="nav">
-					{{#if isInRole 'user'}}
-					<li><a href="{{userPagePath}}">My Orders</a></li>
-					{{/if}}
+					<li><a href="{{userProfilePath}}">My Profile</a></li>
+					<li><a href="{{userCartPath}}">Shopping Cart</a></li>
 
 					<!-- <li><a href="/admin">Admin Panel</a></li> -->
 
