--- a/client/views/navbar.html
+++ b/client/views/navbar.html
@@ -17,7 +17,8 @@
 					<!-- <li><a href="/admin">Admin Panel</a></li> -->
 
 					{{#if isInRole 'admin'}}
-					<li><a href="/admin2">Admin Custom</a></li>
+					<li><a href="/admin">Data View</a></li>
+					<li><a href="/admin2">Administrative Panel</a></li>
 					{{/if}}
 				</ul>
 				{{loginButtons}}
