--- a/client/views/orders/order_history.html
+++ b/client/views/orders/order_history.html
@@ -18,7 +18,7 @@
 
 				<tr style="height:40px;">
 					<td style="vertical-align: bottom;">
-						<b>{{formatDate lastUpdate}}</b>
+						<b>{{dateFormat lastUpdate}}</b>
 					</td>
 					<td></td>
 					<td></td>
