--- a/client/views/orders/order_list.html
+++ b/client/views/orders/order_list.html
@@ -22,16 +22,12 @@
 	</table>
 	
 	<div class="row">
-		<div class="span4 offset8" style="text-align:right; ">
-			<b>Total Price:</b> {{sumPrice myOrder}} {{getCurrency}}<br>
-			<b>Exchange Rate:</b> X {{getExchangeRate getCurrency}}
-			<hr style="margin-top: 2px; margin-bottom: 5px;">
-			<b>Total Payment:</b> {{sumSGD myOrder}} SGD
-			
-			<br><br>
-			<a class="btn btn-info btn-block">Checkout</a>
+		<div class="offset8">
+			{{> orderSummary myOrder}}
 		</div>
 	</div>
+	
+
 	{{else}}
 	You have not placed any orders in this spree.
 	{{/if}}
